--- a/happy/travel.html
+++ b/happy/travel.html
@@ -15,7 +15,7 @@
     <p>You just need to enjoy the fun of travel</p>
     <p>I need to learn the language, check the traffic routes, travel Raiders</p>
     <p>This is just the beginning.</p>
-
+    <a href="fool.html">
     <img src="./img/travel.png" height="100%" width="100%"/>
 
 </div>
