--- a/Demo/days12/s1.html
+++ b/Demo/days12/s1.html
@@ -1,10 +1,197 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <!--<meta http-equiv="Refresh" CONTENT="3">-->
+        <!--<meta http-equiv="Refresh" CONTENT=";Url=http://www.baidu.com"/>-->
+        <meta name="keywords" content="test,page">
+        <link rel="icon" href="s1.ico">
+    <title>This is a test page...</title>
+    </head>
+    <body>
+        <!--<div style="width: 60px;border: 1px solid red">-->
+            <!--&lt;!&ndash;<h1>This is a test page.</h1>&ndash;&gt;-->
+            <!--<p>表示段落</p>-->
+            <!--<p>这里表示段落</p>-->
+            <!--<p>表示换行.....<br>.......</p>-->
+            <!--<a>设为首页 	&copy;2016 Baidu </a>-->
+        <!--</div>-->
+        <!--<p><a href="#t1">page 1</a></p>-->
+        <!--<p><a href="#t2">page 2</a></p>-->
+        <!--<div id="t1" style="height: 200px;background-color: #4cae4c;">这里是第一章</div>-->
+        <!--<div id="t2" style="height: 200px;background-color: red;">这里是第二章</div>-->
+        <div>
 
-</body>
+            <!--<p><img src="s1.ico" style="height: 80px;width: 60px"/></p>-->
+            <!--<p>-->
+                <!--<select>-->
+                    <!--<option>beijing</option>-->
+                    <!--<option>shanghai</option>-->
+                    <!--<option>shandong</option>-->
+                <!--</select>-->
+            <!--</p>-->
+            <!--<p>-->
+                <!--<select size="2">-->
+                    <!--<option>beijing</option>-->
+                    <!--<option>shanghai</option>-->
+                    <!--<option>shandong</option>-->
+                <!--</select>-->
+            <!--</p>-->
+
+            <!--<p>-->
+                <!--<select size="12" multiple="multiple">-->
+                    <!--<option>beijing</option>-->
+                    <!--<option>shanghai</option>-->
+                    <!--<option>shandong</option>-->
+                <!--</select>-->
+            <!--</p>-->
+
+            <!--<p>-->
+                <!--<select>-->
+                    <!--<optgroup label="CN">-->
+                        <!--<option>beijing</option>-->
+                        <!--<option>shanghai</option>-->
+                        <!--<option>shandong</option>-->
+                    <!--</optgroup>-->
+                    <!--<optgroup label="US">-->
+                        <!--<option>WDC</option>-->
+                        <!--<option>sss</option>-->
+                        <!--<option>kk</option>-->
+                    <!--</optgroup>-->
+                <!--</select>-->
+            <!--</p>-->
+            <!--<h1>input 标签</h1>-->
+            <!--<input type="checkbox"/>-->
+            <!--<input type="checkbox"/>-->
+            <!--<hr/>-->
+            <!--<p>male :<input name="gender" type="radio"/></p>-->
+            <!--<p>fmale:<input name="gender" type="radio"/></p>-->
+            <!--<hr/>-->
+            <!--<input type="text"/>-->
+            <!--<input type="password"/>-->
+            <!--<input type="button" value="button"/>-->
+            <!--<input type="submit" value="submit"/>-->
+            <!--<hr/>-->
+            <!--<input type="file"/>-->
+            <!--<hr/>-->
+            <!--<form action="http://10.0.4.42:8000/django_form/">-->
+                <!--<div>-->
+                    <!--host:<input name="host" type="text">-->
+                <!--</div>-->
+                <!--<div>-->
+                    <!--port:<input name="port" type="text">-->
+                <!--</div>-->
+                <!--<div>-->
+                    <!--os:<input name="OS" type="text">-->
+                <!--</div>-->
+                <!--<div>-->
+                    <!--version:<input name="version" type="text">-->
+                <!--</div>-->
+                <!--<input type="button" value="button">-->
+                <!--<input type="submit" value="submit">-->
+
+
+            <!--</form>-->
+            <!--<textarea>默认</textarea>-->
+            <!--<input type="text" value="默认">-->
+            <!--<hr/>-->
+            <!--<label for="cb1">婚否</label>-->
+            <!--<input id="cb1"type="checkbox"/>-->
+            <!--<hr/>-->
+            <!--<ul>-->
+                <!--<li>aaaa</li>-->
+                <!--<li>aaaa</li>-->
+                <!--<li>aaaa</li>-->
+            <!--</ul>-->
+            <!--<ol>-->
+                <!--<li>aaaa</li>-->
+                <!--<li>aaaa</li>-->
+                <!--<li>aaaa</li>-->
+            <!--</ol>-->
+            <!--<dl>-->
+                <!--<dt>标题1</dt>-->
+                <!--<dd>内容</dd>-->
+                <!--<dd>内容</dd>-->
+                <!--<dt>标题2</dt>-->
+                <!--<dd>内容</dd>-->
+                <!--<dd>内容</dd>-->
+            <!--</dl>-->
+            <table border="1">
+                <thead>
+                    <tr>
+                        <th>第1列</th>
+                        <th>第2列</th>
+                        <th>第3列</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td colspan="2">h1,h2</td>
+                        <td>h3</td>
+
+                    </tr>
+                    <tr>
+                        <td rowspan="2">h1,h2</td>
+                        <td>第3行</td>
+                        <td>第3行</td>
+                    </tr>
+                    <tr>
+                        <td>第3行</td>
+                        <td>第3行</td>
+                    </tr>
+                </tbody>
+            </table>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        <a href="http://www.baidu.com" target="_blank">设为首页</a>
+        <a> 	&copy;2016 Baidu </a>
+
+    </body>
 </html>
