--- a/stu103151/days12/registry/index.html
+++ b/stu103151/days12/registry/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
     <title>个人注册</title>
     <link href="./image/favicon.ico" rel="shortcut icon">
+    <style>
+        .button{
+            margin-top: 50px;
+            text-align: center;
+            width: 100%;
+            line-height: 40px;
+            color: #e94609;
+            font-size: 16px;
+        }
+    </style>
 </head>
 <body>
     <div>
@@ -125,8 +135,8 @@
 
             12.4您点击本协议下方的"同意并继续"按钮即视为您完全接受本协议，在点击之前请您再次确认已知悉并完全理解本协议的全部内容。
         </div>
-    <div>
-        <a href="registry.html"><input style="background-color: red;" type="submit" value="同意并继续" /></a>
+    <div class="button">
+        <a href="registry.html"><input type="submit" value="同意并继续" /></a>
     </div>
 </body>
 </html>
