--- a/stu103151/days12/shop/index.html
+++ b/stu103151/days12/shop/index.html
@@ -2,9 +2,122 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>京东(JD.COM)-综合网购首选-正品低价、品质保障、配送及时、轻松购物！</title>
+    <link href="./image/favicon.ico" rel="shortcut icon">
+    <link rel="stylesheet" href="./css/shop.css"/>
 </head>
 <body>
+
+    <div id="Head">
+        <div class="nav">
+            <ul>
+                <li><a>送至
+                    <select style="font-size: 12px">
+                        <optgroup label="华北">
+                            <option>北京</option>
+                            <option>河北</option>
+                            <option>山东</option>
+                        </optgroup>
+                        <optgroup label="东北">
+                            <option>黑龙江</option>
+                            <option>吉林</option>
+                            <option>辽宁</option>
+                        </optgroup>
+                    </select>
+                </a></li>
+                <li><a style="margin-left: 150px" href="#">您好,请登录</a></li>
+                <li><a href="#" style="">免费注册</a></li>
+                <li><a href="#">我的订单</a></li>
+                <li><a href="#">我的京东</a></li>
+                <li><a href="#">京东会员</a></li>
+                <li><a href="#">企业采购</a></li>
+                <li><a>手机京东
+                    <select style="font-size: 12px">
+                        <optgroup label="华北">
+                            <option>北京</option>
+                            <option>河北</option>
+                            <option>山东</option>
+                        </optgroup>
+                        <optgroup label="东北">
+                            <option>黑龙江</option>
+                            <option>吉林</option>
+                            <option>辽宁</option>
+                        </optgroup>
+                    </select>
+                    </a>
+                </li>
+                <li><a>关注京东
+                    <select style="font-size: 12px">
+                        <optgroup label="华北">
+                            <option>北京</option>
+                            <option>河北</option>
+                            <option>山东</option>
+                        </optgroup>
+                        <optgroup label="东北">
+                            <option>黑龙江</option>
+                            <option>吉林</option>
+                            <option>辽宁</option>
+                        </optgroup>
+                    </select>
+                    </a>
+                </li>
+                <li><a>客户服务
+                    <select style="font-size: 12px">
+                        <optgroup label="华北">
+                            <option>北京</option>
+                            <option>河北</option>
+                            <option>山东</option>
+                        </optgroup>
+                        <optgroup label="东北">
+                            <option>黑龙江</option>
+                            <option>吉林</option>
+                            <option>辽宁</option>
+                        </optgroup>
+                    </select>
+                    </a>
+                </li>
+                <li><a style="float: right">网站导航
+                    <select style="font-size: 12px">
+                        <optgroup label="华北">
+                            <option>北京</option>
+                            <option>河北</option>
+                            <option>山东</option>
+                        </optgroup>
+                        <optgroup label="东北">
+                            <option>黑龙江</option>
+                            <option>吉林</option>
+                            <option>辽宁</option>
+                        </optgroup>
+                    </select>
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div>
+            <img src="image/logo-201305.png" style="float: left;    margin: 10px;width: 270px;height: 60px;margin-top: 10px">
+        </div>
+        <div>
+               <a  style="float: left;margin: 30px 300px;">
+                   <input type="text" name="search" style="background:transparent;border:1px solid red; width: 280px;height: 25px "> 搜索
+               </a>
+        </div>
+
+　　 </div>
+    <div id="PageBody">
+          <!--页面主体-->
+        <div id="LeftBody">
+              <!--侧边栏-->
+        </div>
+        <div id="MainBody">
+               <!--主体内容-->
+        </div>
+        <div id="RightBody">
+                <!--侧边栏-->
+　　　　</div>
+　　</div>
+    <div id="Footer">
+            <!--页面底部-->
+　　</div>
 
 </body>
 </html>
