--- a/Demo/days12/cs1.html
+++ b/Demo/days12/cs1.html
@@ -3,8 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="cc.css"/>
+    <style>
+        .cc{
+            color: #FF6600;
+            font-size: 20px;
+        }
+        .bb{
+            color: #6bc30d;
+            font-size: 40px;
+
+        }
+        a{
+            color: darkblue;
+            font-size: 40px;
+        }
+        p{
+            color: #FF6600;
+            font-size: 10px;
+        }
+        input{
+            color: chartreuse;
+            font-size: 50px;
+        }
+        #uu{
+            color: red;
+            font-size: 80px;
+        }
+    </style>
+
 </head>
 <body>
-
+    <input type="text"/>
+    <input type="password"/>
+    <p>This is test p.</p>
+    <p><a>This is test a</a></p>
+    <div id="uu">Thie is test uu.</div>
+    <div class="cc">This is test 1.</div>
+    <div class="dd">This is test 3.</div>
+    <div class="bb">This is test 2.</div>
+    <div style="color: #FF6600;font-size: 10px">This is test 3.</div>
 </body>
 </html>
