--- a/Demo/days12/float1.html
+++ b/Demo/days12/float1.html
@@ -5,18 +5,18 @@
     <title>Title</title>
 </head>
 <body>
-    <div style="width: 800px;background-color: #00a2ca">
-        <div style="background-color: #FF6600;float: left;width: 20%">sssss</div>
-        <div style="background-color: red;float: left;width: 50%">cccc</div>
-        <div style="background-color: black;float: right;width: 20%">sssss</div>
-        <div style="clear: both"></div>
-    </div>
-    <!--<div style="position: fixed;bottom: 40px;right: 30px">返回顶部</div>-->
-    <!--<div style="position: relative;background-color: #4cae4c;height: 400px;width: 500px">-->
-        <!--<div style="position: absolute;bottom: 30px;right: 30px">定位</div>-->
+    <!--<div style="width: 800px;background-color: #00a2ca">-->
+        <!--<div style="background-color: #FF6600;float: left;width: 20%">sssss</div>-->
+        <!--<div style="background-color: red;float: left;width: 50%">cccc</div>-->
+        <!--<div style="background-color: black;float: right;width: 20%">sssss</div>-->
+        <!--<div style="clear: both"></div>-->
     <!--</div>-->
-    <!--<div style="background-color: #038CAE;height: 800px">asd</div>-->
-    <!--<hr style="background-color: red"/>-->
+    <div style="position: fixed;bottom: 40px;right: 30px">返回顶部</div>
+    <div style="position: relative;background-color: #4cae4c;height: 400px;width: 500px">
+        <div style="position: absolute;bottom: 30px;right: 30px">定位</div>
+    </div>
+    <div style="background-color: #038CAE;height: 800px">asd</div>
+    <hr style="background-color: red"/>
 
 </body>
 </html>
